--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 	<h1>Welcome to the AR Library</h1>
 	<p>Welcome to the AR Library website. I created this website in order to view AR objects from the web on any device running iOS 12. Conincidentally, this is the first time I made a website with HTML! It's a lot of fun!</p>
-	<a href="fender_stratocaster.usdz" rel="ar">
-		<img src="assets/egg.png" width="200">
+	<a href="toy_biplane.usdz" rel="ar">
+		<img src="assets/toy_biplane.png" width="400">
 	</a>
 
 </body></html>
