--- a/index.html
+++ b/index.html
@@ -2,14 +2,45 @@
 <html>
 	<head>
 		<meta name="GCD" content="YTk3ODQ3ZWZhN2I4NzZmMzBkNTEwYjJl825c3147959a47938204cdd798ddf96e"/>
-		<title>AR Library</title>
-</head>
+		<title>AR Prototype</title>
+		<style>
+			body {
+				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+				font-weight: 300;
+			}
+			main {
+				margin: 0 auto;
+				padding-top: 50px;
+				max-width: 960px;
+				text-align: center;
+			}
+			p {
+				margin-bottom: 50px;
+				line-height: 1.5em;
+				font-size: 1.15em;
+			}
+			img {
+				border-radius: 20px;
+			}
+			.paragraph {
+				margin: 0 auto;
+				max-width: 560px;
+				padding: 0 15px;
+			}
+		</style>
+	</head>
 
 <body>
-	<h1>Welcome to the AR Library</h1>
-	<p>Welcome to the AR Library website. I created this website in order to view AR objects from the web on any device running iOS 12. Conincidentally, this is the first time I made a website with HTML! It's a lot of fun!</p>
-	<a href="toy_biplane.usdz" rel="ar">
-		<img src="assets/toy_biplane.png" width="400">
-	</a>
+	<main>
+		<h1>Welcome to the AR Library</h1>
+		<div class="paragraph">
+			<p>Welcome to the AR Library website. I created this website in order to view AR objects from the web on any device running iOS 14.5. Conincidentally, this is the first time I made a website with HTML!<br>It's a lot of fun!</p>
+		</div>
+		
+		<a href="toy_biplane.usdz" rel="ar">
+			<img src="assets/toy_biplane.png" width="400">
+		</a>
+	</main>
+	
 
 </body></html>
