--- a/index.html
+++ b/index.html
@@ -2,25 +2,33 @@
 <html>
 	<head>
 		<meta name="GCD" content="YTk3ODQ3ZWZhN2I4NzZmMzBkNTEwYjJl825c3147959a47938204cdd798ddf96e"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>AR Prototype</title>
 		<style>
 			body {
 				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 				font-weight: 300;
+				padding-bottom: 80px;
 			}
 			main {
 				margin: 0 auto;
-				padding-top: 50px;
+				padding-top: 30px;
 				max-width: 960px;
 				text-align: center;
 			}
+			h1 {
+				font-size: 2.3em;
+				margin-bottom: 30px;
+			}
 			p {
-				margin-bottom: 50px;
+				margin-bottom: 40px;
 				line-height: 1.5em;
-				font-size: 1.15em;
+				font-size: 1.4em;
+				color: #2c2c2c;
 			}
 			img {
 				border-radius: 20px;
+				max-width: 100%;
 			}
 			.paragraph {
 				margin: 0 auto;
@@ -34,7 +42,7 @@
 	<main>
 		<h1>Welcome to the AR Library</h1>
 		<div class="paragraph">
-			<p>Welcome to the AR Library website. I created this website in order to view AR objects from the web on any device running iOS 14.5. Conincidentally, this is the first time I made a website with HTML!<br>It's a lot of fun!</p>
+			<p>Welcome to the AR Library website. I created this website in order to view AR objects from the web on any device running iOS 14.5. Conincidentally, this is the first time I made a website with HTML!
 		</div>
 		
 		<a href="toy_biplane.usdz" rel="ar">
