Fixed Style Responsive

--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
 				max-width: 560px;
 				padding: 0 15px;
 			}
+
+			@media only screen and (max-width: 576px) {
+				
+				h1 {
+					font-size: 2em;
+					margin-bottom: 10px;
+				}
+				p {
+					font-size: 1em;
+				}
+				
+			}
+
 		</style>
 	</head>
 
